# mdl-sc-isoform-paper

./: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml
notebooks/: 00_short-read_processing.md  01_p2_UMAP_integration_review.ipynb  01_short-read_analysis.ipynb  02_barnyard.ipynb  02_barnyard_review.ipynb  03_monomer_analysis.ipynb  04_3dg_analysis.ipynb  05_fixation_analysis.ipynb  05_fixation_analysis_review.ipynb  06_masseq_analysis.ipynb  07_extract_barcode_umi.ipynb  08_bam_filtering.ipynb  09_internal_priming.ipynb  09_isoquant_stats.ipynb  10_internal_priming.ipynb  10_isoquant_stats.ipynb  10_isoquant_stats_review.ipynb  10_p2_plot_DE_stats_review.ipynb  11_masseq_gffcompare.ipynb  12_transcript_coverage.ipynb  13_apa_examples.ipynb  14_marti_benchmark.ipynb
src/mdl/sc_isoform_paper/: __init__.py  barcode_extraction.py  cli.py  constants.py  coverage.py  deduplicate.py  figures.mplstyle  graph_layout.py  isoform_counts.py  isoquant.py  logger.toml  marti.py  marti_benchmark.py  pipseq_barcodes.py  plots.py  polyAsite_compare.py  priming.py  schema.py  skera.py  util.py
src/mdl/sc_isoform_paper/templates/: seurat_template.Rmd
